# pypsucurvetrace

./: .gitignore  .readthedocs.yaml  2SK214_config.txt  NOTE_SILABS_USB_ID_CONFIGURATION.txt  README.md  README.rst  TODO.txt  config.txt  config_PSU_TEMPLATE.txt  curveplot  curvetrace  curvetrace2  curvetrace_config.txt  curvetrace_config_TEMPLATE.txt  extractpreheat  index.html  install_in_fresh_machine.txt  match_curves.m  plot_curves.m  plot_curves_V1I1V2.m  plot_curves_V1I1V2_pairs.m  powersupply_PPS.py  pyproject.toml  temp_pid_demo.py  test_notes.txt
classes/: powersupply_PPS.py
docs/: MANUAL.md  about_pypsucurvetrace.txt  conf.py  curveplot.rst  curveprocess.rst  curvetrace.rst  custommath.py  heaterblock.rst  index.rst  installation.rst  overview.rst  supported_PSUs.rst  symbols.rst  what_is_pypsucurvetrace.txt
docs/PSUs/: supported_PSUs.rst
docs/cconvert/: cconvert.rst
docs/curveconvert/: curveconvert.rst
docs/curvematch/: curvematch.rst
docs/curveplot/: curveplot.rst
docs/curveprocess/: curveprocess.rst
docs/curvetrace/: curvetrace.rst  ps_to_png  test_setup.ps
docs/examples/: NFET_example.ps  examples.rst
docs/heaterblock/: heaterblock.rst
docs/installation/: installation.rst
docs/old_docs/: TEXTBITS_FROM_OLD_DOCS.txt  old_MANUAL.md
docs/plotters/: curvematch_surfaces_plotter.py
examples/: config_PSU_seriesPSUexample.txt  curvetrace_config_virtual.txt  virtual_dut_triode_static.txt
examples/DUT_config/: 2SJ74_config.txt  2SJ79_config.txt  2SK82_config_matching.txt  3C4_DL96_triode_config.txt  STF3LN80K5.txt  UJ3N065080K3S_EUVL.txt
examples/test_config/: 2SJ28_config.txt  2SJ28_config_matching.txt  2SJ313_config.txt  2SJ313_quick_config.txt  2SJ74_draft.txt  2SJ79_config.txt  2SK2013_config.txt  2SK2013_quick_config.txt  2SK214_config.txt  2SK216_config.txt  2SK79_config.txt  2SK79_config_draft.txt  2SK82_config.txt  2SK82_config_matching.txt  32B_config.txt  3V4_DL94_triode_config.txt  6C33C_config.txt  6C33C_config_draft.txt  6H30P_config.txt  BC550C_RB100k.txt  BC550C_RB1M.txt  BC550C_RB500k.txt  BC560C_RB500k_draft.txt  D3A_triode_config.txt  D3A_triode_posgrid_config.txt  ECW20N20.txt  ECW20P20_biasmatch.txt  IRFP150_config.txt  LU1014D_config.txt  LU1014D_matching_config.txt  NJW0281G_config.txt  SJEP120R100_config.txt  STF3LN80K5.txt  THF51.txt  THF51_quick.txt  resistor_config.txt
figures/: heaterblock.ps  test_setup.ps
gui_devel/: curvetrace_constants.py  curvetrace_gui  curvetrace_mainGUI.py  curvetrace_tab_DUTsetup.py  curvetrace_tab_HEATERBLOCKsetup.py  curvetrace_tab_PSUsetup.py  curvetrace_tab_curvetrace.py  curvetrace_tab_parameteranalysis.py  curvetrace_tab_settings.py  schematic_draw.py
heaterblock_devel/: config_PSU_HEATERBLOCK_DRAFT.txt  temp_pid_demo.py  temp_pid_demo_virtual.py
lib/: curvetrace_lib.py  curvetrace_tools.py  heaterblock.py  plot_curves.py  powersupply.py  powersupply_BK.py  powersupply_KORAD.py  powersupply_PPS.py  powersupply_RIDEN.py  powersupply_RND.py  powersupply_VOLTCRAFT.py  psu_wrapper.py  read_datafile.py  temperaturesensor_MAXIM.py
old/: config_PSU_TEMPLATE.txt  curvetrace  extractpreheat  plot_curves_V1I1V2.m
old/examples/: config_PSU_heaterblock_example.txt
old/gui_devel/: curvetrace_constants.py
old/lib/: powersupply_RIDEN.py
stuff/: BK_9185B_notes.txt  background_plotter_demo.py  keithley_2280s_python_howto.txt  keithleytest.py  match_curves.m
test_config_examples/: 2SK2013_config.txt  IRFP150_config  IRFP150_config.txt  resistor_config.txt
tests/: README.txt  conftest.py  ctrace  etracer_converter.py  etracer_example_data.csv  etracer_example_data2.csv  requirements.txt  run_curveconvert  run_curvematch  run_curveplot  run_curveprocess  run_curvetrace  test_curvetrace_tools_parsing.py  test_curvetrace_tools_runtime.py  test_powersupply_virtual.py  test_read_datafile.py  virtual_drivers.py
(+65 files in other folders)
