[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypsucurvetrace"
version = "0.0.1"
authors = [
  { name="Matthias Brennwald", email="mbrennwa@gmail.com" },
]
description = "A software toolbox for I/V curve tracing of electronic devices using programmable power supplies."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "matplotlib",
    "serial",
    "minimalmodbus",
    "scipy",
    "simple_pid",
    "pydigitemp",
    "argparse",
    "pathlib",
    "logging",
    "configparser",
    "datetime",
    "multiprocessing"
    "threading",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License = GPL-3.0-or-later",
    "Operating System :: OS Independent",
]

[project.scripts]
# as defined in src/pypsucurvetrace/__init__.py
curvetrace   = "pypsucurvetrace:curvetrace"
curveplot    = "pypsucurvetrace:curveplot"
curveprocess = "pypsucurvetrace:curveprocess"
curvematch   = "pypsucurvetrace:curvematch"

[project.urls]
"Homepage" = "https://github.com/mbrennwa/pypsucurvetrace"
"Bug Tracker" = "https://github.com/mbrennwa/pypsucurvetrace/issues"
