[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypsucurvetrace"
version = "0.8.5"
authors = [
  { name="Matthias Brennwald", email="mbrennwa@gmail.com" },
]
description = "A software toolbox for I/V curve tracing of electronic devices using programmable power supplies."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "pyserial",
    "minimalmodbus",
    "simple_pid",
    "pydigitemp",
    "argparse",
    "pathlib",
    "configparser",
    "datetime"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License = GPL-3.0-or-later",
    "Operating System :: OS Independent",
]

[project.scripts]
# as defined in src/pypsucurvetrace/__init__.py
curvetrace   = "pypsucurvetrace:curvetrace"
curveplot    = "pypsucurvetrace:curveplot"
curveprocess = "pypsucurvetrace:curveprocess"
curvematch   = "pypsucurvetrace:curvematch"

[project.urls]
"Homepage" = "https://github.com/mbrennwa/pypsucurvetrace"
"Bug Tracker" = "https://github.com/mbrennwa/pypsucurvetrace/issues"
