[build-system]
requires = [
    "setuptools>=61",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypsucurvetrace"
version = "1.1.0"
authors = [
  { name="Matthias Brennwald", email="mbrennwa@gmail.com" },
]
description = "A software toolbox for I/V curve tracing of electronic devices using programmable power supplies."
readme = "README.rst"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "matplotlib",
    "PyQt6",
    "scipy",
    "pyserial",
    "minimalmodbus",
    "simple_pid",
    "pydigitemp",
    "pandas"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License = GPL-3.0-or-later",
    "Operating System :: OS Independent",
]

[project.scripts]
# as defined in src/pypsucurvetrace/__init__.py
curvetrace   = "pypsucurvetrace:curvetrace"
curveplot    = "pypsucurvetrace:curveplot"
curveprocess = "pypsucurvetrace:curveprocess"
curvematch   = "pypsucurvetrace:curvematch"
curveconvert     = "pypsucurvetrace:curveconvert"

[project.urls]
"Homepage" = "https://github.com/mbrennwa/pypsucurvetrace"
"Bug Tracker" = "https://github.com/mbrennwa/pypsucurvetrace/issues"

[project.optional-dependencies]
test = [
    "pytest"
]


[tool.setuptools.package-data]
mypkg = ["src/pypsucurvetrace/fonts/*"]

[tool.pytest.ini_options]
markers = [
    "virtual_hw: hardware-free tests using virtual PSU drivers",
    "hw: hardware-in-the-loop tests requiring physical instruments",
]
